--- a/src/css/common.css
+++ b/src/css/common.css
@@ -5,6 +5,7 @@
 .country-name {
     font-size: 44px;
     font-weight: 700;
+    text-transform: uppercase;
     margin-left: 50px;
 }
 .country-list {
@@ -19,9 +20,10 @@
 }
 .country-list__value {
     font-weight: 400;
-    color: rgb(42, 42, 42);
+    color: #263f7e;
 }
 .countries {
+    margin: 10px 0;
     display: flex;
     align-items: center;
     justify-content: flex-start;
@@ -29,4 +31,5 @@
 .countries-name {
     margin: 0;
     margin-left: 50px;
+    font-size: 32px;
 }
